k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-app
spec:
  selector:
    app: healthcare-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: healthcare-db
spec:
  selector:
    app: healthcare-db
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: patient-management-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: patient-management-api
---
apiVersion: v1
kind: Service
metadata:
  name: ehr-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ehr-api
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-scheduling-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: appointment-scheduling-api
---
apiVersion: v1
kind: Service
metadata:
  name: patient-db
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
    name: mssql
  selector:
    app: patient-db
---
apiVersion: v1
kind: Service
metadata:
  name: ehr-db
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
    name: mssql
  selector:
    app: ehr-db
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-db
spec:
  type: ClusterIP
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
    name: mssql
  selector:
    app: appointment-db
